NCF-806: fixed minoor spacing.

--- a/docroot/profiles/unicef/themes/custom/erpw/theme-resources/scss/components/_service-type.scss
+++ b/docroot/profiles/unicef/themes/custom/erpw/theme-resources/scss/components/_service-type.scss
@@ -100,7 +100,7 @@
 		}
 	}
 	.color-field-widget-box-form {
-		margin: 0 auto;
+		margin: 10px auto 0;
 		padding-bottom: 20px;
 		width: 90%;
 		.color_field_widget_box__square {
